--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,9 @@ inputs:
     description: "Set the action status to failed when quality gate status is `ERROR`"
     required: false
     default: "false"
+  pr-number:
+    description: "Pull request number"
+    required: false
 outputs:
   project-status:
     description: "Project's quality gate status either as `OK` or `ERROR`"
