--- a/action.yml
+++ b/action.yml
@@ -21,8 +21,8 @@ inputs:
     description: "Set the action status to failed when quality gate status is `ERROR`"
     required: false
     default: "false"
-  pr-number:
-    description: "Pull request number"
+  pull-request-number:
+    description: "Optional pull request number to comment on and analyse"
     required: false
 outputs:
   project-status:
